fix imgs on safari

--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,33 @@
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
 }
 
-
-
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img {
+  -webkit-object-fit: contain;
+  object-fit: contain;
 }
 
-
-
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
 
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-
-
-
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
-
-
 
 ::-webkit-scrollbar-thumb {
-  background: #41bbcb; 
+  background: #41bbcb;
 }
 
-
-
-
 ::-webkit-scrollbar-thumb:hover {
-  background: #02202d; 
+  background: #02202d;
 }
